fix: correcting addition of task by clicking on cancel

--- a/src/app/components/dialog-new-task/dialog-new-task.component.html
+++ b/src/app/components/dialog-new-task/dialog-new-task.component.html
@@ -1,11 +1,8 @@
 <h2 mat-dialog-title>New Task</h2>
 <mat-dialog-content>
-  <mat-form-field>
-    <mat-label>Favorite Animal</mat-label>
-    <input class="inps" [(ngModel)]="animal" placeholder="Task..." />
-  </mat-form-field>
+  <input class="inps" [(ngModel)]="taskName" placeholder="Task..." />
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="animal()" cdkFocusInitial>Add</button>
+  <button mat-button [mat-dialog-close]="taskName()" cdkFocusInitial>Add</button>
 </mat-dialog-actions>
