style: changing icon of add button

--- a/src/app/components/btn-add/btn-add.component.html
+++ b/src/app/components/btn-add/btn-add.component.html
@@ -1,1 +1,1 @@
-<button mat-fab (click)="openDialog()">+</button>
+<button mat-fab (click)="openDialog()"><mat-icon aria-hidden="false" aria-label="add" fontIcon="add"></mat-icon></button>
