changing the focus of the dialog to the input to the button investment

--- a/src/app/components/dialog-new-task/dialog-new-task.component.html
+++ b/src/app/components/dialog-new-task/dialog-new-task.component.html
@@ -4,5 +4,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="taskName()" cdkFocusInitial>Add</button>
+  <button mat-button [mat-dialog-close]="taskName()">Add</button>
 </mat-dialog-actions>
