--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <header class="header">
-    <input class="inps" type="text" placeholder="Search task..." #inp (change)="callSearch()">
+    <input class="inps" type="text" placeholder="Search task..." #inp (keyup)="callSearch()">
 </header>
