--- a/src/app/components/dialog-new-task/dialog-new-task.component.html
+++ b/src/app/components/dialog-new-task/dialog-new-task.component.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>New Task</h2>
-<mat-dialog-content>
-  <input class="inps" (keyup.enter)="callAddNewTask()" [(ngModel)]="taskName" placeholder="Task..." />
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="taskName()">Add</button>
-</mat-dialog-actions>
+<div [ngClass]="theme()" class="dialog">
+  <h2 [ngClass]="theme()" mat-dialog-title>New Task</h2>
+  <mat-dialog-content>
+    <input class="inps" (keyup.enter)="callAddNewTask()" [(ngModel)]="taskName" placeholder="Task..." />
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button [mat-dialog-close]="taskName()">Add</button>
+  </mat-dialog-actions>
+</div>
